updated menu and footers

--- a/ministrytools.html
+++ b/ministrytools.html
@@ -41,8 +41,9 @@
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="conservation.html">Conservation</a></div>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="about.html">About</a><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="https://tally.so/r/3lBKO6" target="_blank">Get Involved</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="about.html">About</a><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="https://tally.so/r/3lBKO6" target="_blank">Get Involved</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a><a class="dropdown-item" href="#">Menu Item</a></div>
                     </li>
+                    <li class="nav-item" style="padding: 0px;"><a class="nav-link" href="https://tally.so/r/nW2DrP" style="padding-top: 0px;padding-bottom: 0px;" target="_blank"><button class="btn btn-outline-secondary" type="button">Contact</button></a></li>
                 </ul>
             </div>
         </div>
@@ -163,7 +164,6 @@
                             <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
                         </svg></a></li>
             </ul>
-            <p><a href="https://ecoborg.net" target="_blank"><img src="assets/img/poweredby_light.svg" width="200px"></a></p>
             <p class="text-white mb-0">Copyright © 2023 Jacob Borg</p>
         </div>
     </footer><!-- End: Footer Dark -->
