--- a/surfwritersconduct.html
+++ b/surfwritersconduct.html
@@ -26,7 +26,7 @@
 <script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
-<body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
+<body onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
@@ -48,23 +48,90 @@
             </div>
         </div>
     </nav><!-- End: Navbar Right Links (Dark) -->
+    <!-- Start: Hero Parallax -->
+    <section>
+        <!-- Start: Parallax Background -->
+        <div data-bss-disabled-mobile="true" data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/kiril-dobrev-b1spfKX5xz0-unsplash.jpg&quot;) top;">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
+                        <div style="max-width: 350px;">
+                            <h1 class="fw-bold text-white" style="font-family: 'Beach Resort';"><strong><span style="color: inherit;">Surf Writers - Conduct</span></strong></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- End: Parallax Background -->
+    </section><!-- End: Hero Parallax -->
     <!-- Start: Hero Banner -->
     <section class="py-4 py-xl-5">
-        <div class="container h-100">
-            <h1><strong><span style="color: inherit;">Privacy</span></strong></h1>
-            <p>Last Update: 3/13/2024</p>
-            <p>At Wave Discipleship Ministries, accessible from https://www.wavedm.net/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Wave Digital Ministries and how we use it.<br><br>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.<br><br>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Wave Discipleship Ministries. This policy is not applicable to any information collected offline or via channels other than this website.<br><br>Consent<br><br>By using our website, you hereby consent to our Privacy Policy and agree to its terms.<br><br>Information we collect<br><br>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.<br>If you contact us directly, we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide.<br>When you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number.<br><br>How we use your information<br><br>We use the information we collect in various ways, including to:<br><br><br>Provide, operate, and maintain our website<br>Improve, personalize, and expand our website<br>Understand and analyze how you use our website<br>Develop new products, services, features, and functionality<br>Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the website, and for marketing and promotional purposes<br>Send you emails<br>Find and prevent fraud<br><br><br>Log Files<br><br>Wave Discipleship Ministries&nbsp;follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.<br><br><br><br><br>Advertising Partners Privacy Policies<br><br>You may consult this list to find the Privacy Policy for each of the advertising partners of Wave Discipleship Ministries.<br><br>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Wave Discipleship Ministries, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.<br><br>Note that Wave Discipleship Ministries&nbsp;has no access to or control over these cookies that are used by third-party advertisers.<br><br></p>
-            <p>Third Party Privacy Policies<br><br><span style="color: rgb(71, 82, 95);">Wave Discipleship Ministries</span>'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</p>
-            <ul>
-                <li><a href="https://tally.so/help/privacy-policy#4e3f572cb7914313b1bc1b2ee3aaf617" target="_blank">Tally Forms (Forms)</a></li>
-                <li><a href="https://www.planningcenter.com/privacy" target="_blank">Planning Center (Forms and account management)*</a></li>
-                <li><a href="https://counter.dev/dashboard.html" target="_blank">Counter (Web Analytics)</a></li>
-                <li><a href="https://app.skiff.com/docs/db93c237-84c2-4b2b-9588-19a7cd2cd45a#tyGksN9rkqbo2uGYASxsA6HVLjUoly/wTYK8tncTto8=" target="_blank">Skiff (Mail, Drive, Calendar)</a></li>
-            </ul>
-            <p style="font-style: italic;">*We are working to phase out our use of Planning Center to favor more private alternatives.</p>
-            <p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
-            <p>CCPA Privacy Rights (Do Not Sell My Personal Information)<br><br>Under the CCPA, among other rights, California consumers have the right to:<br>Request that a business that collects a consumer's personal data disclose the categories and specific pieces of personal data that a business has collected about consumers.<br>Request that a business delete any personal data about the consumer that a business has collected.<br>Request that a business that sells a consumer's personal data, not sell the consumer's personal data.<br>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.<br><br>GDPR Data Protection Rights<br><br>We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:<br>The right to access – You have the right to request copies of your personal data. We may charge you a small fee for this service.<br>The right to rectification – You have the right to request that we correct any information you believe is inaccurate. You also have the right to request that we complete the information you believe is incomplete.<br>The right to erasure – You have the right to request that we erase your personal data, under certain conditions.<br>The right to restrict processing – You have the right to request that we restrict the processing of your personal data, under certain conditions.<br>The right to object to processing – You have the right to object to our processing of your personal data, under certain conditions.<br>The right to data portability – You have the right to request that we transfer the data that we have collected to another organization, or directly to you, under certain conditions.<br>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.<br><br>Children's Information<br><br>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.<br><br><span style="color: rgb(71, 82, 95);">Wave Discipleship Ministries</span>&nbsp;does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
-        </div>
+        <!-- Start: 2 Rows 1+2 Columns -->
+        <div class="container" style="width: 80%;">
+            <div class="row">
+                <div class="col-md-12 d-lg-flex justify-content-lg-center">
+                    <div class="text-center">
+                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Code of Conduct</h2>
+                        <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-ban" style="margin-right: 10px;">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                                <path d="M5.7 5.7l12.6 12.6"></path>
+                            </svg>Failure to abide by these policies may result in a ban or suspension from club attendance.</p>
+                    </div>
+                    <p></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-notes-off" style="margin-right: 10px;">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M7 3h10a2 2 0 0 1 2 2v10m0 4a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-14"></path>
+                            <path d="M11 7h4"></path>
+                            <path d="M9 11h2"></path>
+                            <path d="M9 15h4"></path>
+                            <path d="M3 3l18 18"></path>
+                        </svg>We do not permit an "Not Safe For Work" (NSFW) to be presented or discussed within our clubs. (Philippians 4:8)</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brain" style="margin-right: 10px;">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M15.5 13a3.5 3.5 0 0 0 -3.5 3.5v1a3.5 3.5 0 0 0 7 0v-1.8"></path>
+                            <path d="M8.5 13a3.5 3.5 0 0 1 3.5 3.5v1a3.5 3.5 0 0 1 -7 0v-1.8"></path>
+                            <path d="M17.5 16a3.5 3.5 0 0 0 0 -7h-.5"></path>
+                            <path d="M19 9.3v-2.8a3.5 3.5 0 0 0 -7 0"></path>
+                            <path d="M6.5 16a3.5 3.5 0 0 1 0 -7h.5"></path>
+                            <path d="M5 9.3v-2.8a3.5 3.5 0 0 1 7 0v10"></path>
+                        </svg>Use common sense and do not promote offensive behavior or language.&nbsp;</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-smile" style="margin-right: 10px;">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                            <path d="M9 10l.01 0"></path>
+                            <path d="M15 10l.01 0"></path>
+                            <path d="M9.5 15a3.5 3.5 0 0 0 5 0"></path>
+                        </svg>Be respectful of others and avoid offensive behavior or language.</p>
+                </div>
+                <div class="col-md-6">
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-no-copyright" style="margin-right: 10px;">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                            <path d="M14 9.75a3.016 3.016 0 0 0 -4.163 .173a2.993 2.993 0 0 0 0 4.154a3.016 3.016 0 0 0 4.163 .173"></path>
+                            <path d="M6 6l1.5 1.5"></path>
+                            <path d="M16.5 16.5l1.5 1.5"></path>
+                        </svg>We obligate our chapter leaders and members to abide by Copy Right laws and to not plagiarize. (Exodus 20:2-17)</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-users-group" style="margin-right: 10px;">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M10 13a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                            <path d="M8 21v-1a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v1"></path>
+                            <path d="M15 5a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                            <path d="M17 10h2a2 2 0 0 1 2 2v1"></path>
+                            <path d="M5 5a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                            <path d="M3 13v-1a2 2 0 0 1 2 -2h2"></path>
+                        </svg>Welcome non-Christians to club meetings and events. This is an outreach, not a clique.</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-scribble-off" style="margin-right: 10px;">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M3 15c2 3 4 4 7 4c1.95 0 4.324 -1.268 5.746 -3.256m1.181 -2.812a5.97 5.97 0 0 0 .073 -.932c0 -4 -3 -7 -6 -7c-.642 0 -1.239 .069 -1.78 .201m-2.492 1.515c-.47 .617 -.728 1.386 -.728 2.284c0 2.5 2 5 6 5c.597 0 1.203 -.055 1.808 -.156m3.102 -.921c2.235 -.953 4.152 -2.423 5.09 -3.923"></path>
+                            <path d="M3 3l18 18"></path>
+                        </svg>We do not permit offensive or explicit imagery from being present within our clubs.</p>
+                </div>
+            </div>
+        </div><!-- End: 2 Rows 1+2 Columns -->
     </section><!-- End: Hero Banner -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark" style="background: #273043;">
