--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Wave Discipleship Ministries</title>
     <meta name="theme-color" content="#000000">
-    <meta name="description" content="Making waves for His Kingdom.">
     <meta name="twitter:title" content="Wave Digital Ministries">
     <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
     <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
     <meta name="twitter:card" content="summary">
+    <meta name="description" content="Making waves for His Kingdom.">
+    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
@@ -48,9 +48,10 @@
                                 <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
                                 <path d="M9.7 17l4.6 0"></path>
                             </svg></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-dark">
+                    <li class="nav-item"><a class="nav-link active" href="https://bushel.truevine.online/profiles/@wave-digital-ministries/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-b text-dark">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
+                                <path d="M7 20v-16h6a4 4 0 0 1 0 8a4 4 0 0 1 0 8h-6"></path>
+                                <path d="M7 12l6 0"></path>
                             </svg></a></li>
                 </ul>
             </div>
@@ -94,7 +95,7 @@
     <section class="py-4 py-xl-5">
         <div class="container h-100">
             <div class="row h-100">
-                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
+                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center mx-auto">
                     <div>
                         <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Mission</h2>
                         <p class="mb-4">Wave Discipleship Ministries' mission is to share His Word, tend to His Creation, and #BeAWave4Christ through technology and community.</p>
@@ -107,7 +108,7 @@
     <section class="py-4 py-xl-5">
         <div class="container h-100">
             <div class="row h-100">
-                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
+                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center mx-auto">
                     <div>
                         <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Story</h2>
                         <p class="mb-4">Founded as Wave Digital Ministries in 2019, Wave Discipleship Ministries has reached over 150,000 people across 33 nations.</p>
@@ -128,7 +129,7 @@
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex justify-content-center justify-content-md-center justify-content-lg-end">
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-cross text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-cross text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 21h4v-9h5v-4h-5v-5h-4v5h-5v4h5z"></path>
                         </svg></div>
@@ -141,7 +142,7 @@
             </div>
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-books text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-books text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M5 4m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z"></path>
                             <path d="M9 4m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z"></path>
@@ -160,7 +161,7 @@
             </div>
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-users-group text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-users-group text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 13a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
                             <path d="M8 21v-1a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v1"></path>
@@ -178,7 +179,7 @@
             </div>
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-heart" style="color: #1a1a1a;">
+                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-heart" style="color: #1a1a1a;">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
                         </svg></div>
@@ -201,7 +202,7 @@
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex justify-content-center justify-content-lg-end">
             <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-notebook text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-notebook text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M6 4h11a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-11a1 1 0 0 1 -1 -1v-14a1 1 0 0 1 1 -1m3 0v18"></path>
                             <path d="M13 8l2 0"></path>
@@ -217,7 +218,7 @@
             </div>
             <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chart-bubble text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chart-bubble text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M6 16m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
                             <path d="M16 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
@@ -233,7 +234,7 @@
             </div>
             <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-speakerphone text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-speakerphone text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M18 8a3 3 0 0 1 0 6"></path>
                             <path d="M10 8v11a1 1 0 0 1 -1 1h-1a1 1 0 0 1 -1 -1v-5"></path>
@@ -249,7 +250,7 @@
             </div>
             <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-plant" style="color: #1a1a1a;">
+                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center mb-3 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-plant" style="color: #1a1a1a;">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M7 15h10v4a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2v-4z"></path>
                             <path d="M12 9a6 6 0 0 0 -6 -6h-3v2a6 6 0 0 0 6 6h3"></path>
@@ -294,9 +295,10 @@
                             <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
                             <path d="M9.7 17l4.6 0"></path>
                         </svg></a></li>
-                <li class="list-inline-item"><a href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
+                <li class="list-inline-item"><a href="https://bushel.truevine.online/profiles/@wave-digital-ministries/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-b text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
+                            <path d="M7 20v-16h6a4 4 0 0 1 0 8a4 4 0 0 1 0 8h-6"></path>
+                            <path d="M7 12l6 0"></path>
                         </svg></a></li>
             </ul>
             <p class="text-white mb-0">Copyright © 2023 Jacob Borg</p>
