--- a/impact.html
+++ b/impact.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Wave Discipleship Ministries</title>
     <meta name="theme-color" content="#000000">
-    <meta name="description" content="Making waves for His Kingdom.">
     <meta name="twitter:title" content="Wave Digital Ministries">
     <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
     <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
     <meta name="twitter:card" content="summary">
+    <meta name="description" content="Making waves for His Kingdom.">
+    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
@@ -48,9 +48,10 @@
                                 <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
                                 <path d="M9.7 17l4.6 0"></path>
                             </svg></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-dark">
+                    <li class="nav-item"><a class="nav-link active" href="https://bushel.truevine.online/profiles/@wave-digital-ministries/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-b text-dark">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
+                                <path d="M7 20v-16h6a4 4 0 0 1 0 8a4 4 0 0 1 0 8h-6"></path>
+                                <path d="M7 12l6 0"></path>
                             </svg></a></li>
                 </ul>
             </div>
@@ -105,7 +106,7 @@
             <div class="row gy-4 row-cols-2 row-cols-md-4 justify-content-center">
                 <div class="col">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-devices" style="color: #000;">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center mb-2 d-inline-block bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-devices" style="color: #000;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M13 9a1 1 0 0 1 1 -1h6a1 1 0 0 1 1 1v10a1 1 0 0 1 -1 1h-6a1 1 0 0 1 -1 -1v-10z"></path>
                                 <path d="M18 8v-3a1 1 0 0 0 -1 -1h-13a1 1 0 0 0 -1 1v12a1 1 0 0 0 1 1h9"></path>
@@ -119,7 +120,7 @@
                 </div>
                 <div class="col" style="color: var(--bs-dark);">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3" style="color: var(--bs-dark);">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2" style="color: #000;">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center mb-2 d-inline-block bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2" style="color: #000;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5"></path>
                                 <path d="M9 4v13"></path>
@@ -135,7 +136,7 @@
                 </div>
                 <div class="col" style="color: var(--bs-dark);">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3" style="color: var(--bs-dark);">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-git-fork" style="color: #000;">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center mb-2 d-inline-block bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-git-fork" style="color: #000;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M12 18m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
                                 <path d="M7 6m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
@@ -216,9 +217,10 @@
                             <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
                             <path d="M9.7 17l4.6 0"></path>
                         </svg></a></li>
-                <li class="list-inline-item"><a href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
+                <li class="list-inline-item"><a href="https://bushel.truevine.online/profiles/@wave-digital-ministries/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-b text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
+                            <path d="M7 20v-16h6a4 4 0 0 1 0 8a4 4 0 0 1 0 8h-6"></path>
+                            <path d="M7 12l6 0"></path>
                         </svg></a></li>
             </ul>
             <p class="text-white mb-0">Copyright © 2023 Jacob Borg</p>
