--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Wave Discipleship Ministries</title>
     <meta name="theme-color" content="#000000">
-    <meta name="description" content="Making waves for His Kingdom.">
     <meta name="twitter:title" content="Wave Digital Ministries">
     <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
     <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
     <meta name="twitter:card" content="summary">
+    <meta name="description" content="Making waves for His Kingdom.">
+    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
@@ -48,9 +48,10 @@
                                 <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
                                 <path d="M9.7 17l4.6 0"></path>
                             </svg></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-dark">
+                    <li class="nav-item"><a class="nav-link active" href="https://bushel.truevine.online/profiles/@wave-digital-ministries/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-b text-dark">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
+                                <path d="M7 20v-16h6a4 4 0 0 1 0 8a4 4 0 0 1 0 8h-6"></path>
+                                <path d="M7 12l6 0"></path>
                             </svg></a></li>
                 </ul>
             </div>
@@ -94,7 +95,7 @@
     <section class="py-4 py-xl-5">
         <div class="container h-100">
             <div class="row h-100">
-                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
+                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-center align-items-md-center justify-content-xl-center mx-auto">
                     <div>
                         <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Mission</h2>
                         <p class="mb-4">Wave Discipleship Ministries' mission is to share His Word, tend to His Creation, and #BeAWave4Christ through technology and community.</p>
@@ -107,7 +108,7 @@
     <section class="d-md-flex justify-content-md-center py-4 py-xl-5">
         <div class="container h-100">
             <div class="row h-100">
-                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
+                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-center align-items-md-center justify-content-xl-center mx-auto">
                     <div>
                         <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Fulfilling the Call</h2>
                         <p class="mb-4">We are utilizing existing technologies, such as social media, and our own technology to share God's Word over cyberspace as well as reaching out to the world via community projects and groups.</p>
@@ -207,9 +208,10 @@
                             <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
                             <path d="M9.7 17l4.6 0"></path>
                         </svg></a></li>
-                <li class="list-inline-item"><a href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
+                <li class="list-inline-item"><a href="https://bushel.truevine.online/profiles/@wave-digital-ministries/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-b text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
+                            <path d="M7 20v-16h6a4 4 0 0 1 0 8a4 4 0 0 1 0 8h-6"></path>
+                            <path d="M7 12l6 0"></path>
                         </svg></a></li>
             </ul>
             <p class="text-white mb-0">Copyright © 2023 Jacob Borg</p>
